MYZ-6957 fix z-card spacings

--- a/web-components-library/src/components/z-card-body/styles.css
+++ b/web-components-library/src/components/z-card-body/styles.css
@@ -1,6 +1,11 @@
+:host {
+  height: 400px;
+  width: auto;
+}
+
 :host > div {
   height: 400px;
-  width: 300px;
+  width: auto;
   display: flex;
   align-items: center;
   justify-content: center;
