--- a/web-components-library/src/components/z-card-cover/styles.css
+++ b/web-components-library/src/components/z-card-cover/styles.css
@@ -1,6 +1,5 @@
 img {
   display: block;
-  max-width: 300px;
   max-height: 400px;
   margin: auto auto;
 }
